# xiuxian-artisan-workshop

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  devenv.nix  devenv.yaml  flake.nix  justfile  pyproject.toml  secretspec.toml
.claude/: project_instructions.md
.claude/commands/: load-skill.md  omni.md  skills.md  smart-commit.md
.config/xiuxian-artisan-workshop/: settings.yaml  xiuxian.toml
.cursor/commands/: omni.md
.gemini/: settings.json
.gemini/policies/: my-rules.toml
.github/workflows/: checks.yaml  ci.yaml  omni-agent-embedding-gates.yaml  omni-agent-memory-gates.yaml
assets/how-to/: agent-native-development.md  documentation-workflow.md  gitops.md  rag-usage.md  release-process.md  testing-workflows.md
assets/instructions/: documentation-standards.md  modern-workflows.md  problem-solving.md  project-conventions.md
assets/prompts/: knowledge_system.md  system_core.md
assets/skills/: README.md
assets/specs/: template.md  xml-qa-schema-augmentation.md  zettelkasten-knowledge-architecture.md
assets/templates/: daily_agenda.md  daily_agenda.md.j2
assets/tests/: smart-commit-scenarios.md
assets/tool-router/: README.md  thread-safe-instructions-loader.md
docs/: DOCUMENTATION_DESIGN.md  LLM_DOCUMENTATION_POLICY.md  index.md
docs/00_vision/: ROOT_INDEX.md  TRINITY_MANIFESTO.md  VS_OBSIDIAN.md
docs/02_dev/: HANDBOOK.md
docs/03_features/: qianhuan-audit-closure.md  session_governance.md  xiuxian_zhixing_heyi.md  xiuxian_zhixing_scenarios.md
docs/04_chronicles/: 2026-03-01-Alchemical-Crisis-Victory.md  FOUNDATIONAL_ERA.md
docs/99_llm/: READING_GUIDE.md  llm-brain-map.md  memory-context.md  native-workflow-guide.md  routing-guide.md  skill-discovery.md  xiuxian_zhixing_theory.md
docs/GTD/: DAILY.md  PROJECTS.md
docs/developer/: ast-grep-core.md  cli.md  discover.md  hot-reload.md  knowledge-search-improvements.md  mcp-core-architecture.md  routing.md  testing.md
docs/reference/: vector-search-options-contract.md
docs/research/: 2026-02-24-rust-embedding-stack-audit.md  2026-02-25-rust-agent-hyperscale-runtime-plan.md
docs/standards/: AUDITOR_CODEX.md  METADATA_STANDARD.md  PERSONA_TEMPLATE.md
docs/testing/: README.md  graphflow_modularization.md  keyword-backend-decision-report-v4.md  keyword-backend-decision-report.md  keyword-backend-decision.md  keyword-backend-detailed-comparison-v3.md  keyword-backend-llm-reliability-batch-report.md  keyword-backend-multi-model-report.md  keyword-backend-replacement-evidence-v4.md  keyword-backend-report-template.md  keyword-backend-statistical-evidence.md  keyword-backend-statistical-report.md  keyword-backend-usage-guide.md  keyword-eval-model-profiles.md  llm_comprehension_test.md  omni-agent-live-multigroup-runbook.md  omni-agent-valkey-webhook-tracking.md  router-file-discovery-intent-report.md  routing-quality-analysis.md  rust-agent-loop-memory-testing.md  scenario-test-driven-autofix-loop.md  skills-tools-benchmark-ci.md  test_kit_modernization.md
nix/modules/: lefthook.nix  python.nix  rust.nix  tasks.nix
scripts/: README.md  benchmark_skills_tools_ci.sh  benchmark_wendao_related.py  benchmark_wendao_search.py  bootcamp_adversarial_v2.py  bootcamp_distributed_swarm.py  bootcamp_distributed_swarm_gate.py  bootcamp_epic_forge_cluster.py  bootcamp_forge_trigger.py  bootcamp_run_forge.py  bootcamp_swarm_evolution.py  bootcamp_verify_evolution.py  ci-contract-freeze.sh  ci-local-recall-gates.sh  ci_scripts_smoke.sh  compare_cli_runner_summary.py  evaluate_wendao_retrieval.py  recall_profile_phases.py  render_embedding_role_perf_summary.py  render_skills_tools_ci_summary.py  test_bootcamp_adversarial_v2.py  test_bootcamp_distributed_swarm.py  test_bootcamp_distributed_swarm_gate.py  test_llm_proxy.py  test_minimax_endpoints.py  test_real.py  test_render.py  test_render_embedding_role_perf_summary.py  test_repo_analyzer_e2e.py  test_smart_commit_e2e.py  verify_brain.py  verify_mcp_interface.py  verify_memrl_scenarios.legacy.py  verify_pipeline.py
scripts/channel/: acceptance_runner_config.py  acceptance_runner_config_args.py  acceptance_runner_config_build.py  acceptance_runner_models.py  acceptance_runner_pipeline.py  acceptance_runner_pipeline_execution.py  acceptance_runner_pipeline_report.py  acceptance_runner_pipeline_steps.py  acceptance_runner_pipeline_steps_initial.py  acceptance_runner_pipeline_steps_initial_core.py  acceptance_runner_pipeline_steps_initial_matrix.py  acceptance_runner_pipeline_steps_models.py  acceptance_runner_pipeline_steps_scenarios.py  acceptance_runner_report.py  acceptance_runner_runtime.py  agent-channel-polling.sh  agent-channel-webhook.sh  agent_channel_blackbox.py  agent_channel_blackbox_config.py  agent_channel_blackbox_config_args.py  agent_channel_blackbox_config_args_core.py  agent_channel_blackbox_config_args_expectations.py  agent_channel_blackbox_config_build.py  agent_channel_blackbox_config_build_identity.py  agent_channel_blackbox_config_build_values.py  agent_channel_blackbox_config_payload.py  agent_channel_blackbox_constants.py  agent_channel_blackbox_context_builder.py  agent_channel_blackbox_entry_bindings.py  agent_channel_blackbox_entry_bindings_runtime.py  agent_channel_blackbox_entry_context.py  agent_channel_blackbox_entry_flow.py  agent_channel_blackbox_entry_flow_runtime.py  agent_channel_blackbox_exports.py  agent_channel_blackbox_http.py  agent_channel_blackbox_log_bindings.py  agent_channel_blackbox_log_exports.py  agent_channel_blackbox_models.py  agent_channel_blackbox_module_bindings.py  agent_channel_blackbox_module_bindings_build.py  (+598 more)
scripts/ci/: rust_quality_gate_ci.sh
scripts/nix/: import-metal-toolchain.sh
scripts/rust/: cargo_audit_gate.sh  cargo_check_with_timeout.py  cargo_exec.sh  check_test_layout.sh  omni_agent_backend_role_contracts.sh  omni_agent_dependency_assertions.sh  omni_agent_embedding_batch_sweep.py  omni_agent_embedding_role_perf_heavy_gate.sh  omni_agent_embedding_role_perf_medium_gate.sh  omni_agent_embedding_role_perf_smoke.py  omni_agent_embedding_role_perf_smoke.sh  (+7 more)
(+171 files in other folders)
