[workspace]
resolver = "2"

# Include all Rust crates explicitly (no glob to avoid missing crate errors)
members = [
    "packages/rust/bindings/python",
    "packages/rust/crates/xiuxian-config-core",
    "packages/rust/crates/omni-ast",
    "packages/rust/crates/omni-edit",
    "packages/rust/crates/xiuxian-event",
    "packages/rust/crates/omni-executor",
    "packages/rust/crates/omni-io",
    "packages/rust/crates/xiuxian-wendao",
    "packages/rust/crates/omni-lance",
    "packages/rust/crates/xiuxian-macros",
    "packages/rust/crates/omni-memory",
    "packages/rust/crates/xiuxian-skills",
    "packages/rust/crates/omni-security",
    "packages/rust/crates/omni-sniffer",
    "packages/rust/crates/omni-sandbox",
    "packages/rust/crates/omni-tags",
    "packages/rust/crates/omni-tokenizer",
    "packages/rust/crates/xiuxian-tui",
    "packages/rust/crates/omni-types",
    "packages/rust/crates/omni-vector",
    "packages/rust/crates/xiuxian-qianhuan",
    "packages/rust/crates/xiuxian-llm",
    "packages/rust/crates/omni-window",
    "packages/rust/crates/xiuxian-mcp",
    "packages/rust/crates/omni-agent",
    "packages/rust/crates/xiuxian-qianji",
    "packages/rust/crates/xiuxian-memory",
    "packages/rust/crates/xiuxian-zhixing",
    "packages/rust/crates/xiuxian-zhenfa",
]

# Workspace package metadata (inherited by all crates)
[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["CyberXiuXian Artisan Studio"]
license = "Apache-2.0"
publish = false
description = "CyberXiuXian Artisan Workshop - High-performance Agentic OS with Rust Core"

# Unified dependency management
[workspace.dependencies]
# Core dependencies
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0.100"
thiserror = "2.0.17"
walkdir = "2.5.0"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4.38", default-features = false }
chrono-tz = "0.10.4"
tracing = "0.1"
globset = "0.4"
include_dir = "0.7.4"
rand = "0.8"
futures = "0.3.32"
tokio-util = "0.7.18"
md5 = "0.8.0"
comrak = { version = "0.50.0", default-features = false }
quick-xml = "0.39.2"
petgraph = "0.7"
async-trait = "0.1"
mistralrs = "0.7.0"

# Git operations (libgit2 for performance)
git2 = "0.20.3"

# Python bindings - Python 3.13 support via PyO3 0.27+
pyo3 = { version = "0.27.2", features = ["extension-module"] }
pyo3-asyncio = { version = "0.27", features = ["tokio"] }

# Safe I/O & Tokenization
tiktoken-rs = "0.9.1"
memchr = "2.7.6"
tempfile = "3.24"
sha2 = "0.10"
hex = "0.4"

# JSON Schema generation for Schema Singularity (SSOT)
schemars = "0.8.21"
jsonschema = "0.18.3"

# LanceDB for vector storage (2.0: v2 manifest default, create_index returns IndexMetadata)
lance = { version = "2.0", default-features = false }
lance-arrow = "2.0"

# Arrow IPC for analytics (Rust RecordBatch → bytes → Python pyarrow); used in bindings only
arrow = "57"
arrow-ipc = "57"

# Redis cache and session backend
redis = { version = "1.0.3", default-features = false }

# Logging
log = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Parallel processing
rayon = "1.11"

# MCP client (omni-agent Phase A; ref: codex-rs rmcp-client)
# Note: rmcp 0.16 still requires "server" feature for client build (task_manager/handler refs)
rmcp = { version = "0.16", default-features = false, features = [
    "client",
    "server",
    "macros",
    "schemars",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
    "transport-child-process",
] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# CLI and HTTP (omni-agent gateway)
clap = { version = "4.5", features = ["derive"] }
axum = "0.8"

# Performance optimization - Thin LTO for reduced memory
[profile.release]
opt-level = "s"      
lto = "thin"        
codegen-units = 1
strip = true        
panic = "abort"     

# [ODF-REP] Global Lints Configuration (Rust 1.74+)
[workspace.lints.rust]
unsafe_code = "deny"       # Default deny unsafe unless explicitly allowed
missing_docs = "warn"      # Public APIs must have documentation

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"       # Deny unwrap usage in production
expect_used = "deny"       # Deny expect usage in production
