[project]
name = "xiuxian-artisan-workshop"
description = "Tri-MCP Agentic OS: orchestrator + executor + coder"
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["version"]
dependencies = [
    "docling>=2.72.0",
    "pdfminer-six>=20260107",
    "pymupdf>=1.25.0",
    "raganything",
    "structlog>=25.5.0",
]


[dependency-groups]
dev = [
    "omni-core-rs",
    "xiuxian-wendao-py",
    "omni-agent",
    "omni-foundation",
    "omni-core",
    "omni-test-kit",
    "polyfactory>=3.2.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0,<2.0",
    "pytest-randomly>=4.0.1",
    "pytest-xdist>=3.6.1",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=6.0.0",
    "pytest-benchmark>=4.0.0",
    "dirty-equals>=0.11",
    "ruff>=0.14.10",
    "vulture>=2.14",
    "pytest-json-report>=1.5.0",
    "pytest-rerunfailures>=14.0",
    "maturin>=1.11.5",
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.hatch.version]
source = "vcs"


[tool.uv.sources]
xiuxian-wendao-py = { workspace = true }
omni-foundation = { workspace = true }
omni-agent = { workspace = true }
omni-core = { workspace = true }
omni-mcp = { workspace = true }
omni-test-kit = { workspace = true }
omni-core-rs = { path = "packages/rust/bindings/python", editable = true }
raganything = { git = "https://github.com/HKUDS/RAG-Anything.git" }


[tool.uv.workspace]
members = ["packages/python/*"]


[tool.hatch.build.targets.wheel]
packages = []
bypass-selection = true

[tool.ruff]
target-version = "py313"
line-length = 100
src = [
    "packages/python/agent/src",
    "packages/python/core/src",
    "packages/python/foundation/src",
    "packages/python/xiuxian-wendao-py/src",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade (Python 3.13+ modernization)
    "ASYNC",  # flake8-async (TaskGroup over gather)
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.isort]
known-first-party = ["omni.agent", "omni.core", "omni.foundation", "xiuxian_wendao_py"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
namespace_packages = true
explicit_package_bases = true
mypy_path = [
    "packages/python/agent/src",
    "packages/python/core/src",
    "packages/python/foundation/src",
    "packages/python/xiuxian-wendao-py/src",
]

# Native TOML config for pytest 9.0+ (supports list, bool, dict types)
[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
strict = true  # Enable strict_config, strict_markers, strict_parametrization_ids, strict_xfail
timeout = 300  # Default timeout in seconds (5 minutes)
addopts = [
    "--timeout=300",
    "-n", "1",  # Single process to prevent 4×10GB=40GB OOM; use OMNIDEV_TEST_WORKERS=4 for parallel
    "-p", "no:randomly",  # Disable random order for consistent output
    "-p", "no:benchmark", # Disable benchmark to avoid xdist warnings
]
testpaths = [
    "packages/python/agent/tests",
    "packages/python/core/tests",
    "packages/python/foundation/tests",
    "packages/python/mcp-server/tests",
    "packages/python/test-kit/tests",
    "packages/python/xiuxian-wendao-py/tests",
    "assets/skills",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::pytest.PytestReturnNotNoneWarning",
    # websockets library deprecation warnings (from starlette dependency)
    "ignore::DeprecationWarning:websockets",
    "ignore::DeprecationWarning:starlette",
    # aiohttp + Python 3.13 compatibility warning (upstream, non-actionable in repo code)
    "ignore:enable_cleanup_closed ignored because .* is fixed in Python version.*:DeprecationWarning:aiohttp.connector",
    # litellm runtime warning in test teardown on Python 3.13 (upstream behavior)
    "ignore:coroutine 'Logging\\.async_success_handler' was never awaited:RuntimeWarning:litellm\\.litellm_core_utils\\.logging_worker",
    # Ignore benchmark disabled warning when running in parallel (xdist)
    "ignore:Benchmarks are automatically disabled:pytest_benchmark.logger.PytestBenchmarkWarning",
    "ignore:Module already imported so cannot be rewritten; omni\\.test_kit\\.fixtures:pytest.PytestAssertRewriteWarning",
]
norecursedirs = ["stress_tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "architecture: marks architecture guardrail tests",
    "benchmark: marks tests as performance benchmarks (requires pytest-benchmark)",
    "omni_skill: mark tests for a specific Omni skill",
    "omni_data_driven: mark tests for data-driven execution with Omni test-kit",
]

# Coverage configuration for package sources
[tool.coverage.run]
source = ["omni"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/venv/*",
    "*/site-packages/*",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
precision = 1
show_missing = true

[tool.coverage.html]
title = "Omni Dev Fusion - Test Coverage Report"


[tool.vulture]
# Vulture configuration for dead code detection
paths = ["packages/python/agent/src", "packages/python/foundation/src"]
min_confidence = 80
# Exclude generated or third-party code
exclude = ["*/tests/*", "*/__pycache__/*", "*/.venv/*", "*/venv/*"]
